Bug 368953 - kdeconnect ignores left-handed mouse settings
Summary: kdeconnect ignores left-handed mouse settings
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 1.0
Platform: Arch Linux Linux
: NOR major
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL: https://forum.kde.org/viewtopic.php?f...
Keywords:
Depends on:
Blocks:
 
Reported: 2016-09-17 14:52 UTC by avi9526
Modified: 2016-09-29 08:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description avi9526 2016-09-17 14:52:29 UTC
When using left-handed mouse settings in KDE kdeconnect does contect menu click on single tap instead of normal click. This bug makes remote input feature unusable for me.


Reproducible: Always

Steps to Reproduce:
1.Switch mouse to left-handed in systemsettings5→Input Devices→Mouse→Left handed
2.Run kdeconnect on android phone, go to Remote input
3.Navigate cursor somewhere (text field, etc) do single finger tap on smartphone screen

Actual Results:  
context menu opens

Expected Results:  
normal mouse click must happen, not context menu

On android using kdeconnect 1.4 from f-droid
On PC using archlinux
Problem appears with package from official repository (kdeconnect-1.0-1) and from AUR (kdeconnect-git-r1442.c6fba2f-1)
Comment 1 Albert Vaca Cintora 2016-09-18 10:34:25 UTC
For now, you can change the behaviour of single finger/double finger taps on KDE Connect settings to reverse it.
Comment 2 avi9526 2016-09-24 19:04:31 UTC
> single finger/double finger taps
which version has single tap option available? Version 1.4 has only two/three fingers tap options
Comment 3 Albert Vaca Cintora 2016-09-28 15:40:31 UTC
Oh, sorry. Then you will have to wait for a fix :( I will see if I can get it fixed easily :)
Comment 4 Albert Vaca Cintora 2016-09-29 08:59:50 UTC
Git commit d6355ab0ce71400c2a45d67ca90e2145966d341a by Albert Vaca.
Committed on 29/09/2016 at 08:54.
Pushed by albertvaka into branch '1.x'.

Detect left handed mouse configurations and swap faked buttons

M  +29   -10   plugins/mousepad/mousepadplugin.cpp

http://commits.kde.org/kdeconnect-kde/d6355ab0ce71400c2a45d67ca90e2145966d341a