Detect left handed mouse configurations and swap faked buttons

BUG: 368953